--- a/FormularioJFrame/bin/Coco/.gitignore
+++ b/FormularioJFrame/bin/Coco/.gitignore
@@ -1,1 +1,11 @@
 /Cliente.class
+/ConexionBD.class
+/HDoble.class
+/HMatrimonial.class
+/HSimple.class
+/Habitacion.class
+/Hotel.class
+/clsCEsporadico.class
+/clsCHabitual.class
+/clsCliente.class
+/clsReservacion.class
